# sqlite-lunatic-diesel-example

./: .env  .gitignore  Cargo.toml  README.md  test.db
migrations/2022-12-12-165108_create_posts/: up.sql
migrations/2022-12-15-210815_create_associations/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
